# learnopengl

./: .gitignore  CMakeLists.txt  README.md  flake.nix
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
